# quickbacktrack

./: Cargo.toml  LICENSE.md  README.md
examples/: eight_queens.rs  knapsack.rs  magic_square.rs  rule_110.rs  rule_153.rs  sudoku-entropy.rs  sudoku.rs  tsp.rs
src/: lib.rs
stats/: queens.txt
