[package]
name = "quickbacktrack"
version = "0.5.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
description = "Library for back tracking with customizable search for moves"
keywords = ["back", "track", "puzzle", "procedural", "generation"]
license = "MIT"
repository = "https://github.com/bvssvni/quickbacktrack.git"
homepage = "https://github.com/bvssvni/quickbacktrack"

[dependencies]
fnv = "1.0.5"
