[package]
name = "quickbacktrack"
version = "0.7.1"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
description = "Library for backtracking with customizable search for moves"
keywords = ["backtrack", "puzzle", "procedural", "generation", "advancedresearch"]
license = "MIT"
repository = "https://github.com/bvssvni/quickbacktrack.git"
homepage = "https://github.com/bvssvni/quickbacktrack"
edition = "2018"

[dependencies]
fnv = "1.0.5"
rand = "0.7.3"
