[package]
name = "quickbacktrack"
version = "0.7.1"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
description = "Library for backtracking with customizable search for moves"
keywords = ["backtrack", "puzzle", "procedural", "generation", "advancedresearch"]
license = "MIT or Apache-2.0"
repository = "https://github.com/advancedresearch/quickbacktrack.git"
homepage = "https://github.com/advancedresearch/quickbacktrack"
edition = "2024"

[dependencies]
fnv = "1.0.7"
rand = "0.9.2"
